--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -45,7 +45,7 @@ selectProductKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCO
 getReviewKeywordListCount=SELECT COUNT(*) FROM REVIEW JOIN MEMBER USING (USER_NO) WHERE USER_ID LIKE '%' || ? || '%'
 selectReviewKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, PNAME, USER_ID, CREATE_DATE, CONTENT FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) WHERE USER_ID LIKE ? ORDER BY REVIEW_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 
-#optiop
+#option
 selectOptionCode=SELECT OPTION_CODE FROM OPTION_CODE WHERE OPTION_TYPE1 = ? AND OPTION_TYPE2=?
 insertPdetailNo=INSERT INTO PRODUCT_DETAIL VALUES(SEQ_PDETAIL.NEXTVAL, ?, ?)
 insertOrderBy=INSERT INTO ORDER_BUY VALUES(?,(SELECT MAX(P_DETAIL_NO) FROM PRODUCT_DETAIL),?)
