--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -65,3 +65,7 @@ mtmQnaAnswer=SELECT MTM_NO,MTM_NAME,MTM_TITLE,MTM_CONTENT,CREATE_DATE,USER_NAME,
 insertAnswer=upDATE  MEN_TO_MEN SET RE_COMMENT=? WHERE MTM_NO=?
 
 
+
+
+
+selectMemberCart=SELECT * FROM CART JOIN ORDER_BUY USING(CART) JOIN PRODUCT_DETAIL USING(P_DETAIL_NO) JOIN OPTION_CODE USING(OPTION_CODE) JOIN PRODUCT USING(PCODE) WHERE CART=?
