--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -36,4 +36,4 @@ selectNoticeList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BO
 selectNoticeThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=40 ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
 insertNoticeNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,40)
 getNoticeKeywordListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_TITLE LIKE '%' || ? || '%' AND BOARD_CATEGORY=40
-selectNotice=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOARD_TITLE, COUNT, CREATE_DATE, MODIFY_DATE, STATUS FROM BOARD WHERE BOARD_CATEGORY=40 ORDER BY CREATE_DATE DESC) A) WHERE RNUM = 1
+selectNotice=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOARD_TITLE, COUNT, CREATE_DATE, MODIFY_DATE, STATUS FROM BOARD WHERE BOARD_CATEGORY=40 AND STATUS='Y' ORDER BY CREATE_DATE DESC) A) WHERE RNUM = 1
