--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -49,3 +49,7 @@ selectReviewKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT REVI
 selectOptionCode=SELECT OPTION_CODE FROM OPTION_CODE WHERE OPTION_TYPE1 = ? AND OPTION_TYPE2=?
 insertPdetailNo=INSERT INTO PRODUCT_DETAIL VALUES(SEQ_PDETAIL.NEXTVAL, ?, ?)
 insertOrderBy=INSERT INTO ORDER_BUY VALUES(?,(SELECT MAX(P_DETAIL_NO) FROM PRODUCT_DETAIL),?)
+
+#main
+selectSearchList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE, PNAME, SUP_PRICE, PRICE, STOCK, STATUS, KEYWORD, TOTAL_COUNT, KIND, PCONTENT FROM PRODUCT WHERE PNAME LIKE '%' || ? || '%' OR KEYWORD LIKE '%' || ? || '%' ORDER BY PCODE DESC) A) WHERE RNUM BETWEEN ? AND ?
+getSearchListCount=SELECT COUNT(*) FROM PRODUCT WHERE STATUS='Y' AND PNAME LIKE'%' || ? || '%' OR KEYWORD LIKE '%' || ? || '%'
