admin 1to1 현철 수정

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -6,7 +6,7 @@ selectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,U
 
 
 getQnaListCount=SELECT COUNT(*) FROM MEN_TO_MEN WHERE USER_NO=? AND STATUS='Y'
-selectMyQnaList=SELECT * FROM (SELECT ROWNUM RNUM,A.* FROM (SELECT MTM_NO,USER_NO,MTM_NAME,MTM_TITLE,CREATE_DATE  FROM MEMBER  JOIN MEN_TO_MEN M USING (USER_NO)JOIN MTM_TYPE ON (MTM_TYPE =MTM_TYPE_NO) WHERE USER_NO=? AND M.STATUS='Y' ORDER BY MTM_NO DESC) A)WHERE ROWNUM BETWEEN ? AND ?
+selectMyQnaList=SELECT * FROM (SELECT ROWNUM RNUM,A.* FROM (SELECT MTM_NO,USER_NO,MTM_NAME,MTM_TITLE,CREATE_DATE,RE_COMMENT,ANSWER FROM MEMBER  JOIN MEN_TO_MEN M USING (USER_NO)JOIN MTM_TYPE ON (MTM_TYPE =MTM_TYPE_NO) WHERE USER_NO=? AND M.STATUS='Y' ORDER BY MTM_NO DESC) A)WHERE ROWNUM BETWEEN ? AND ?
 MyPageInfo=SELECT USER_NO,USER_NAME,G.GRADE_NAME,POINT_PRICE,(SELECT COUNT(PCODE) FROM MEMBER JOIN WISH_LIST W USING(USER_NO) WHERE USER_NO= ?) AS W ,(SELECT COUNT(*)FROM MEMBER  JOIN MEM_COUPON C  USING (USER_NO) WHERE USER_NO= ?) AS C FROM MEMBER M JOIN MEM_GRADE G USING (GRADE_CODE) JOIN POINT USING (USER_NO) WHERE USER_NO= ?
 
 getSearchListCount=SELECT COUNT(*) FROM MEMBER WHERE USER_ID LIKE '%' || ? || '%'
@@ -26,7 +26,7 @@ selectAllGradeList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,U
 insertMtm=INSERT INTO MEN_TO_MEN VALUES(SEQ_MTMNO.nextval,?,?,?,?,SYSDATE,DEFAULT,SYSDATE,DEFAULT,DEFAULT,DEFAULT)
 insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_MTMNO.CURRVAL, ?,?,?,SYSDATE,?,DEFAULT,70)
 updateMtm=UPDATE MEN_TO_MEN SET STATUS='N' WHERE MTM_NO=?
-selectMtm=select MTM_NO,MTM_TYPE,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT FROM MEN_TO_MEN M JOIN MEMBER USING (USER_NO)  JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO) WHERE MTM_NO=? and M.status='Y'
+selectMtm=select MTM_NO,MTM_TYPE,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT,RE_COMMENT FROM MEN_TO_MEN M JOIN MEMBER USING (USER_NO)  JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO) WHERE MTM_NO=? and M.status='Y'
 selectAttachment=select file_NO ,ORIGIN_NAME , CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
 
 insertMember=INSERT INTO MEMBER VALUES(SEQ_UNO.NEXTVAL, 10, ?, ?, ?, ?, ?, ?, ?,SYSDATE, SYSDATE, 0,'N', 'Y')
