--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -1,5 +1,5 @@
 #common
-selectBoard=SELECT * FROM BOARD WHERE BOARD_NO = ?
+selectBoard=SELECT BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, B.STATUS, CHANGE_NAME FROM BOARD B JOIN ATTACHMENT ON(BOARD_NO = REF_BNO) WHERE BOARD_NO = ?
 updateBoard=UPDATE BOARD SET BOARD_TITLE = ?, BOARD_CONTENT = ?, MODIFY_DATE = SYSDATE, STATUS = ? WHERE BOARD_NO = ?
 selectAttachment=SELECT * FROM ATTACHMENT WHERE REF_BNO=?
 updateAttachment=UPDATE ATTACHMENT SET CHANGE_NAME=?, ORIGIN_NAME=?, FILE_PATH=1 WHERE FILE_NO=?
