--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -53,3 +53,5 @@ insertOrderBy=INSERT INTO ORDER_BUY VALUES(?,(SELECT MAX(P_DETAIL_NO) FROM PRODU
 #main
 selectSearchList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE, PNAME, SUP_PRICE, PRICE, STOCK, STATUS, KEYWORD, TOTAL_COUNT, KIND, PCONTENT FROM PRODUCT WHERE PNAME LIKE '%' || ? || '%' OR KEYWORD LIKE '%' || ? || '%' ORDER BY PCODE DESC) A) WHERE RNUM BETWEEN ? AND ?
 getSearchListCount=SELECT COUNT(*) FROM PRODUCT WHERE STATUS='Y' AND PNAME LIKE'%' || ? || '%' OR KEYWORD LIKE '%' || ? || '%'
+mainProductList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT P JOIN ATTACHMENT ON (PCODE = REF_BNO) WHERE P.STATUS='Y' AND FILE_LEVEL = 1 AND BOARD_LEVEL = 80 ORDER BY PCODE DESC) A) WHERE RNUM BETWEEN 1 AND 8
+
