store-cart/order_하정

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -1,5 +1,5 @@
 #member-query.properties
-loginMember=SELECT * FROM MEMBER WHERE USER_ID = ? AND USER_PWD= ? AND STATUS='Y'
+loginMember=SELECT * FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE USER_ID = ? AND USER_PWD= ? AND STATUS='Y'
 
 getListCount=SELECT COUNT(*) FROM MEMBER
 selectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
