space_rental.jsp(수정)_준호
1234

--- a/teaspoonProject/src/sql/space/space-query.properties
+++ b/teaspoonProject/src/sql/space/space-query.properties
@@ -1,8 +1,8 @@
 #spaceInsert
 insertSpace=INSERT INTO RESERVATION VALUES(SEQ_RESERVNO.NEXTVAL, ?, SYSDATE, ?, ?, ?, ?, ?, DEFAULT, ?, ?)
 
-#paymentSelect
-
+#paymentInsert
+insertPayment=INSERT INTO RESERV_PAYMENT(RESERV_NO, GOODS_PAY, TOTAL, RESERV_PAY) VALUES(SEQ_RESERVNO.CURRVAL, ?, ?, DEFAULT)
 
 #goodsSelect
 selectGoodsList=SELECT * FROM GOODS 
