--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -37,6 +37,7 @@ emailCheck=SELECT COUNT(*) FROM MEMBER WHERE EMAIL=?
 idfindCheck=SELECT USER_ID FROM MEMBER WHERE EMAIL=?
 selectUserPwd=SELECT USER_PWD,EMAIL FROM MEMBER WHERE USER_ID=?
 selectUserId=SELECT USER_ID FROM MEMBER WHERE EMAIL=?
+memberInsertCart=INSERT INTO CART VALUES(SEQ_USERNO.CURRVAL,SYSDATE)
 
 insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
 deleteGrade=DELETE FROM MEM_GRADE WHERE GRADE_CODE=?
