--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -29,7 +29,7 @@ updateMtm=UPDATE MEN_TO_MEN SET STATUS='N' WHERE MTM_NO=?
 selectMtm=select MTM_NO,MTM_TYPE,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT,RE_COMMENT FROM MEN_TO_MEN M JOIN MEMBER USING (USER_NO)  JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO) WHERE MTM_NO=? and M.status='Y'
 selectAttachment=select file_NO ,ORIGIN_NAME , CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
 
-insertMember=INSERT INTO MEMBER VALUES(SEQ_UNO.NEXTVAL, 10, ?, ?, ?, ?, ?, ?, ?,SYSDATE, SYSDATE, 0,'N', 'Y')
+insertMember=INSERT INTO MEMBER VALUES(SEQ_UNO.NEXTVAL, 10, ?, ?, ?, ?, ?, ?, ?,SYSDATE, SYSDATE, 0,'N', 'Y', 0)
 updateMember=UPDATE MEMBER SET USER_PWD=?, PHONE=?, EMAIL=? WHERE USER_NO=?
 selectMember=SELECT * FROM MEMBER WHERE USER_ID=?
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE USER_ID=?
@@ -37,7 +37,7 @@ emailCheck=SELECT COUNT(*) FROM MEMBER WHERE EMAIL=?
 idfindCheck=SELECT USER_ID FROM MEMBER WHERE EMAIL=?
 selectUserPwd=SELECT USER_PWD,EMAIL FROM MEMBER WHERE USER_ID=?
 selectUserId=SELECT USER_ID FROM MEMBER WHERE EMAIL=?
-memberInsertCart=INSERT INTO CART VALUES(SEQ_USERNO.CURRVAL,SYSDATE)
+memberInsertCart=INSERT INTO CART VALUES(SEQ_UNO.CURRVAL,SYSDATE)
 
 insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
 deleteGrade=DELETE FROM MEM_GRADE WHERE GRADE_CODE=?
