--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -1,5 +1,5 @@
 #member-query.properties
-loginMember=SELECT user_no,grade_code,user_id,user_pwd,user_name,gender,birthday,phone,email,enroll_date,modify_date,buy_point,admin,status,address,point,grade_name , (SELECT COUNT(PCODE) FROM MEMBER JOIN WISH_LIST  USING(USER_NO)WHERE USER_ID = ? ) AS WISHCOUNT ,(SELECT COUNT(*)FROM MEMBER  JOIN MEM_COUPON C  USING (USER_NO) WHERE USER_ID = ? ) AS COUPONCOUNT FROM MEMBER M join mem_grade using (grade_code)  WHERE USER_ID = ? AND USER_PWD= ? AND STATUS='Y'
+loginMember=SELECT user_no,grade_code,user_id,user_pwd,user_name,gender,birthday,phone,email,enroll_date,modify_date,buy_point,ADMIN,status,point,grade_name , (SELECT COUNT(PCODE) FROM MEMBER JOIN WISH_LIST  USING(USER_NO)WHERE USER_ID = ? ) AS WISHCOUNT ,(SELECT COUNT(*)FROM MEMBER  JOIN MEM_COUPON C  USING (USER_NO) WHERE USER_ID = ? ) AS COUPONCOUNT FROM MEMBER M join mem_grade using (grade_code)  WHERE USER_ID = ? AND USER_PWD= ? AND STATUS='Y'
 
 getListCount=SELECT COUNT(*) FROM MEMBER
 selectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
@@ -64,7 +64,6 @@ selectMtmAdminListType=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT MTM_N
 selectMtmAdminCount=SELECT COUNT(*) FROM MEN_TO_MEN JOIN MTM_TYPE ON (MTM_TYPE_NO=MTM_TYPE) WHERE MTM_NAME = ?
 mtmQnaAnswer=SELECT MTM_NO,MTM_NAME,MTM_TITLE,MTM_CONTENT,CREATE_DATE,RE_COMMENT,COMMENT_DATE,ANSWER,USER_NAME,USER_ID FROM MEN_TO_MEN JOIN MEMBER USING (USER_NO) JOIN MTM_TYPE ON(MTM_TYPE_NO = MTM_TYPE)WHERE MTM_NO = ?
 updateAnswer=UPDATE MEN_TO_MEN SET RE_COMMENT=? , ANSWER='Y', COMMENT_DATE=SYSDATE WHERE MTM_NO=?
-
 
 
 
