--- a/teaspoonProject/src/sql/space/space-query.properties
+++ b/teaspoonProject/src/sql/space/space-query.properties
@@ -11,3 +11,6 @@ selectGoodsList=SELECT * FROM GOODS
 getSpaceListCount=SELECT count(*) FROM RESERVATION
 selectSpaceList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT RESERV_NO,APP_DATE,RESERV_TIME,RESERV_DATE,USER_NAME, R.PHONE, VISIT_NUM,RESERV_REASON,GOODS,R.GRADE_CODE,ACCEPT,TOTAL FROM RESERVATION R JOIN RESERV_PAYMENT USING(RESERV_NO) JOIN MEMBER USING(USER_NO)ORDER BY APP_DATE DESC) A)WHERE RNUM BETWEEN ? AND ?
 
+reservationDeny=UPDATE RESERVATION SET ACCEPT='N' WHERE RESERV_NO=?
+reservationAccept=UPDATE RESERVATION SET ACCEPT='Y' WHERE RESERV_NO=?
+
