--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -69,3 +69,8 @@ updateAnswer=UPDATE MEN_TO_MEN SET RE_COMMENT=? , ANSWER='Y', COMMENT_DATE=SYSDA
 
 
 selectMemberCart=SELECT * FROM CART JOIN ORDER_BUY USING(CART) JOIN PRODUCT_DETAIL USING(P_DETAIL_NO) JOIN OPTION_CODE USING(OPTION_CODE) JOIN PRODUCT USING(PCODE) JOIN ATTACHMENT ON (PCODE=REF_BNO) WHERE CART=? AND FILE_LEVEL=1  AND BOARD_LEVEL=80
+
+
+getOrderCount=SELELCT COUNT(*) FORM ORDERS
+orderConditionList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT ORDER_DATE, ORDERER, RECIPIENT, PAYMENT, PROGRESS, PRODUCT_INFO FROM ORDERS JOIN MEMBER USING (USER_NO) ORDER BY ORDER_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
+
