mypage _ 공간대여 확인칸 _현철

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -69,3 +69,8 @@ updateAnswer=UPDATE MEN_TO_MEN SET RE_COMMENT=? , ANSWER='Y', COMMENT_DATE=SYSDA
 
 
 selectMemberCart=SELECT * FROM CART JOIN ORDER_BUY USING(CART) JOIN PRODUCT_DETAIL USING(P_DETAIL_NO) JOIN OPTION_CODE USING(OPTION_CODE) JOIN PRODUCT USING(PCODE) JOIN ATTACHMENT ON (PCODE=REF_BNO) WHERE CART=? AND FILE_LEVEL=1  AND BOARD_LEVEL=80
+
+# rental
+reservListCount= select COUNT(*) FROM RESERVATION WHERE USER_NO =?
+SelectReservCafe= SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT RESERV_NO,APP_DATE,RESERV_DATE,RESERV_TIME,VISIT_NUM,ACCEPT,TOTAL  FROM MEMBER M  JOIN RESERVATION USING (USER_NO) JOIN RESERV_PAYMENT USING (RESERV_NO) WHERE USER_NO = ? ORDER BY APP_DATE DESC)A) WHERE RNUM BETWEEN ? AND ? 
+
