--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -9,7 +9,7 @@ increaseCount=UPDATE BOARD SET COUNT=COUNT+1 WHERE BOARD_NO=? AND STATUS='Y'
 #magazine(20)
 insertMagazine=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, STATUS) VALUES(SEQ_BNO.NEXTVAL,20,?,?,DEFAULT,SYSDATE,SYSDATE,DEFAULT)
 insertMagazineAttachemnt=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_BNO.CURRVAL, ?,?,?,SYSDATE,1,DEFAULT,20)
-getMagazineListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=20
+getMagazineListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=20 AND STATUS='Y'
 selectMagazineList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BOARD_CATEGORY,BOARD_TITLE,BOARD_CONTENT,COUNT,CREATE_DATE,MODIFY_DATE,B.STATUS,CHANGE_NAME FROM BOARD B JOIN ATTACHMENT ON(BOARD_NO=REF_BNO) WHERE BOARD_CATEGORY=20 AND BOARD_LEVEL=20 AND FILE_LEVEL=1 AND B.STATUS='Y' ORDER BY BOARD_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectMagazineThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=20 ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
 insertMagazineNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,20)
@@ -20,7 +20,7 @@ selectMagazine=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOA
 #event(30)
 insertEvent=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, STATUS) VALUES(SEQ_BNO.NEXTVAL,30,?,?,DEFAULT,SYSDATE,SYSDATE,DEFAULT)
 insertEventAttachemnt=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_BNO.CURRVAL, ?,?,?,SYSDATE,1,DEFAULT,30)
-getEventListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=30
+getEventListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=30 STATUS='Y'
 selectEventList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BOARD_CATEGORY,BOARD_TITLE,BOARD_CONTENT,COUNT,CREATE_DATE,MODIFY_DATE,B.STATUS,CHANGE_NAME FROM BOARD B JOIN ATTACHMENT ON(BOARD_NO=REF_BNO) WHERE BOARD_CATEGORY=30 AND BOARD_LEVEL=30 AND FILE_LEVEL=1 AND B.STATUS='Y' ORDER BY BOARD_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectEventThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=30 ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
 insertEventNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,30)
@@ -31,7 +31,7 @@ eventKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, B
 #notice(40)
 insertNotice=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, STATUS) VALUES(SEQ_BNO.NEXTVAL,40,?,?,DEFAULT,SYSDATE,SYSDATE,DEFAULT)
 insertNoticeAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_BNO.CURRVAL, ?,?,?,SYSDATE,1,DEFAULT,40)
-getNoticeListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=40
+getNoticeListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=40 STATUS='Y'
 selectNoticeList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BOARD_CATEGORY,BOARD_TITLE,BOARD_CONTENT,COUNT,CREATE_DATE,MODIFY_DATE,B.STATUS,CHANGE_NAME FROM BOARD B JOIN ATTACHMENT ON(BOARD_NO=REF_BNO) WHERE BOARD_CATEGORY=40 AND BOARD_LEVEL=40 AND FILE_LEVEL=1 AND B.STATUS='Y' ORDER BY BOARD_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectNoticeThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=40 ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
 insertNoticeNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,40)
