--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -29,7 +29,7 @@ updateMtm=UPDATE MEN_TO_MEN SET STATUS='N' WHERE MTM_NO=?
 selectMtm=select MTM_NO,MTM_TYPE,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT,RE_COMMENT FROM MEN_TO_MEN M JOIN MEMBER USING (USER_NO)  JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO) WHERE MTM_NO=? and M.status='Y'
 selectAttachment=select file_NO ,ORIGIN_NAME , CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
 
-insertMember=INSERT INTO MEMBER VALUES(SEQ_UNO.NEXTVAL, 10, ?, ?, ?, ?, ?, ?, ?,SYSDATE, SYSDATE, 0,'N', 'Y', 0)
+insertMember=INSERT INTO MEMBER VALUES(SEQ_USERNO.NEXTVAL, 10, ?, ?, ?, ?, ?, ?, ?,SYSDATE, SYSDATE, 0,'N', 'Y', 0)
 updateMember=UPDATE MEMBER SET USER_PWD=?, PHONE=?, EMAIL=? WHERE USER_NO=?
 selectMember=SELECT * FROM MEMBER WHERE USER_ID=?
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE USER_ID=?
@@ -37,7 +37,7 @@ emailCheck=SELECT COUNT(*) FROM MEMBER WHERE EMAIL=?
 idfindCheck=SELECT USER_ID FROM MEMBER WHERE EMAIL=?
 selectUserPwd=SELECT USER_PWD,EMAIL FROM MEMBER WHERE USER_ID=?
 selectUserId=SELECT USER_ID FROM MEMBER WHERE EMAIL=?
-memberInsertCart=INSERT INTO CART VALUES(SEQ_UNO.CURRVAL,SYSDATE)
+memberInsertCart=INSERT INTO CART VALUES(SEQ_USERNO.CURRVAL,SYSDATE)
 
 insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
 deleteGrade=DELETE FROM MEM_GRADE WHERE GRADE_CODE=?
@@ -71,6 +71,6 @@ updateAnswer=UPDATE MEN_TO_MEN SET RE_COMMENT=? , ANSWER='Y', COMMENT_DATE=SYSDA
 selectMemberCart=SELECT * FROM CART JOIN ORDER_BUY USING(CART) JOIN PRODUCT_DETAIL USING(P_DETAIL_NO) JOIN OPTION_CODE USING(OPTION_CODE) JOIN PRODUCT USING(PCODE) JOIN ATTACHMENT ON (PCODE=REF_BNO) WHERE CART=? AND FILE_LEVEL=1  AND BOARD_LEVEL=80
 
 
-getOrderCount=SELELCT COUNT(*) FORM ORDERS
+getOrderCount=SELECT COUNT(*) FROM ORDERS
 orderConditionList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT ORDER_DATE, ORDERER, RECIPIENT, PAYMENT, PROGRESS, PRODUCT_INFO FROM ORDERS JOIN MEMBER USING (USER_NO) ORDER BY ORDER_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
