MYPAGE _ DELIVERY 현철

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -74,3 +74,8 @@ selectMemberCart=SELECT * FROM CART JOIN ORDER_BUY USING(CART) JOIN PRODUCT_DETA
 getOrderCount=SELECT COUNT(*) FROM ORDERS
 orderConditionList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT ORDER_DATE, ORDERER, RECIPIENT, PAYMENT, PROGRESS, PRODUCT_INFO FROM ORDERS JOIN MEMBER USING (USER_NO) ORDER BY ORDER_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
+
+
+#order history
+orderHistoryListCount=SELECT COUNT(*) FROM ORDERS WHERE USER_NO=?
+orderConditionList=
