mypage _ 주문내역 확인 현철

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -74,3 +74,10 @@ selectMemberCart=SELECT * FROM CART JOIN ORDER_BUY USING(CART) JOIN PRODUCT_DETA
 getOrderCount=SELECT COUNT(*) FROM ORDERS
 orderConditionList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,ORDER_NO,ORDERER,ORDERER_PHONE,RECIPIENT,RECIPIENT_PHONE,RECIPIENT_ADDRESS,shipping_fee,PAYMENT,ORDER_DATE,PROGRESS,CART,ORDER_MAESSAGE,PRODUCT_INFO FROM ORDERS JOIN MEMBER USING (USER_NO) ORDER BY ORDER_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 orderConditionDetailList=SELECT * FROM ORDERS WHERE ORDER_NO =?
+
+
+
+#ORDER HISTORY
+orderHistoryListCount=SELECT * FROM ORDERS WHERE USER_NO=?
+orderHistoryList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,ORDER_NO,ORDERER,ORDERER_PHONE,RECIPIENT,RECIPIENT_PHONE,RECIPIENT_ADDRESS,shipping_fee,PAYMENT,ORDER_DATE,PROGRESS,CART,ORDER_MAESSAGE,PRODUCT_INFO FROM ORDERS JOIN MEMBER USING (USER_NO) WHERE USER_NO=? ORDER BY ORDER_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
+
