--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -11,13 +11,13 @@ insertMagazine=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CO
 insertMagazineAttachemnt=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_BNO.CURRVAL, ?,?,?,SYSDATE,1,DEFAULT,20)
 getMagazineListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=20 AND STATUS='Y'
 selectMagazineList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BOARD_CATEGORY,BOARD_TITLE,BOARD_CONTENT,COUNT,CREATE_DATE,MODIFY_DATE,B.STATUS,CHANGE_NAME FROM BOARD B JOIN ATTACHMENT A ON(BOARD_NO=REF_BNO) WHERE BOARD_CATEGORY=20 AND BOARD_LEVEL=20 AND FILE_LEVEL=1 AND B.STATUS='Y' AND A.STATUS='Y' ORDER BY BOARD_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
-selectMagazineThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=20 AND A.STATUS='Y' ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
+selectMagazineThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=20 ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
 insertMagazineNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,20)
 getMagazineKeywordListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_TITLE LIKE '%' || ? || '%' AND BOARD_CATEGORY=20
 selectMagazineKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOARD_TITLE, COUNT, CREATE_DATE, MODIFY_DATE, STATUS FROM BOARD WHERE BOARD_TITLE LIKE ? AND BOARD_CATEGORY=20 ORDER BY CREATE_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectMagazine=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOARD_TITLE, COUNT, CREATE_DATE, MODIFY_DATE, STATUS FROM BOARD WHERE BOARD_TITLE LIKE ? AND BOARD_CATEGORY=20 AND STATUS='Y' ORDER BY CREATE_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
-preSelectBoard=SELECT BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, B.STATUS, CHANGE_NAME FROM BOARD B JOIN ATTACHMENT A ON(BOARD_NO = REF_BNO) WHERE BOARD_NO < ? AND BOARD_CATEGORY = 20 AND B.STATUS = 'Y'AND A.STATUS = 'Y' AND ROWNUM <=1 ORDER BY BOARD_NO DESC
-nextSelectBoard=SELECT BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, B.STATUS, CHANGE_NAME FROM BOARD B JOIN ATTACHMENT A ON(BOARD_NO = REF_BNO) WHERE BOARD_NO > ? AND BOARD_CATEGORY = 20 AND B.STATUS = 'Y'AND A.STATUS = 'Y' AND ROWNUM <=1 ORDER BY BOARD_NO 
+preSelectBoard=SELECT BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, B.STATUS, CHANGE_NAME FROM BOARD B JOIN ATTACHMENT A ON(BOARD_NO = REF_BNO) WHERE BOARD_NO < ? AND BOARD_CATEGORY = 20 AND B.STATUS = 'Y' AND ROWNUM <=1 ORDER BY BOARD_NO DESC
+nextSelectBoard=SELECT BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, B.STATUS, CHANGE_NAME FROM BOARD B JOIN ATTACHMENT A ON(BOARD_NO = REF_BNO) WHERE BOARD_NO > ? AND BOARD_CATEGORY = 20 AND B.STATUS = 'Y' AND ROWNUM <=1 ORDER BY BOARD_NO 
 
 #event(30)
 insertEvent=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, STATUS) VALUES(SEQ_BNO.NEXTVAL,30,?,?,DEFAULT,SYSDATE,SYSDATE,DEFAULT)
