--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -79,6 +79,9 @@ insertPoint=INSERT INTO POINT VALUES(?, SYSDATE, 1, 'store', ?)
 deletePoint=INSERT INTO POINT VALUES(?, SYSDATE, 2, 'store', ?)
 updatePoint=UPDATE MEMBER SET POINT=POINT+? WHERE user_no=?
 
+insertReservPoint=INSERT INTO POINT VALUES(?, SYSDATE, 1, 'reservation', ?)
+deleteReservPoint=INSERT INTO POINT VALUES(?, SYSDATE, 2, 'reservation', ?)
+
 
 #ORDER HISTORY
 orderHistoryListCount=SELECT * FROM ORDERS WHERE USER_NO=?
