--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -28,7 +28,7 @@ selectEventThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FIL
 insertEventNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,30)
 getEventKeywordListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_TITLE LIKE '%' || ? || '%' AND BOARD_CATEGORY=30
 eventKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOARD_TITLE, COUNT, CREATE_DATE, MODIFY_DATE, STATUS FROM BOARD WHERE BOARD_TITLE LIKE ? AND BOARD_CATEGORY=30 ORDER BY CREATE_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
-selectEvent=SELECT * FROM BOARD WHERE BOARD_NO=? AND BOARD_CATEGORY=30
+selectEvent=SELECT BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, B.STATUS, CHANGE_NAME FROM BOARD B JOIN ATTACHMENT ON(BOARD_NO = REF_BNO) WHERE BOARD_NO = ?
 
 #notice(40)
 insertNotice=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, STATUS) VALUES(SEQ_BNO.NEXTVAL,40,?,?,DEFAULT,SYSDATE,SYSDATE,DEFAULT)
