mypage orderlist 현철

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -54,8 +54,8 @@ selectOneWishList=SELECT COUNT(*) FROM WISH_LIST WHERE USER_NO=? AND PCODE=?
 deleteWish=DELETE FROM WISH_LIST WHERE USER_NO=? AND PCODE=?
 
 
-selectPointList=SELECT * FROM (SELECT ROWNUM RNUM,A.* FROM(select  user_no,point_date,DIVISION,CONTENT,POINT_PRICE FROM MEMBER JOIN POINT USING (USER_NO) WHERE USER_NO=? ORDER BY POINT_DATE DESC)A) WHERE RNUM BETWEEN ? AND ?
-getPointListCount=select COUNT(*)FROM MEMBER JOIN POINT USING (USER_NO) WHERE USER_NO=?
+selectPointList=SELECT * FROM (SELECT ROWNUM RNUM,A.* FROM(SELECT  user_no,point_date,DIVISION,CONTENT,POINT_PRICE FROM MEMBER JOIN POINT USING (USER_NO) WHERE USER_NO=? ORDER BY POINT_DATE DESC)A) WHERE RNUM BETWEEN ? AND ?
+getPointListCount=SELECT COUNT(*)FROM MEMBER  JOIN POINT USING (USER_NO) WHERE USER_NO=?
 
 # 1to1 admin
 selectMtmAdminCount=select COUNT(*) FROM MEN_TO_MEN 
@@ -81,3 +81,4 @@ orderConditionDetailList=SELECT * FROM ORDERS WHERE ORDER_NO =?
 orderHistoryListCount=SELECT * FROM ORDERS WHERE USER_NO=?
 orderHistoryList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,ORDER_NO,ORDERER,ORDERER_PHONE,RECIPIENT,RECIPIENT_PHONE,RECIPIENT_ADDRESS,shipping_fee,PAYMENT,ORDER_DATE,PROGRESS,CART,ORDER_MAESSAGE,PRODUCT_INFO FROM ORDERS JOIN MEMBER USING (USER_NO) WHERE USER_NO=? ORDER BY ORDER_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
+MyPageOrderConfirm=UPDATE ORDERS SET PROGRESS='40' WHERE ORDER_NO=?
