--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -12,7 +12,7 @@ insertNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?,?,?,?, SYSD
 
 #coffeeSelect
 selectProductList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT FROM PRODUCT WHERE STATUS='Y' ORDER BY PCODE DESC) A) WHERE RNUM BETWEEN ? AND ?
-selectCoffeeThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON(PCODE=REF_BNO) WHERE KIND='C' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 AND P.STATUS='Y') A) WHERE RNUM BETWEEN ? AND ?
+selectCoffeeThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON(PCODE=REF_BNO) WHERE KIND='C' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 AND P.STATUS='Y' ORDER BY PCODE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
 
 #pagination
