--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -1,5 +1,5 @@
 #member-query.properties
-loginMember=SELECT user_no,grade_code,user_id,user_pwd,user_name,gender,birthday,phone,email,enroll_date,modify_date,buy_point,ADMIN,status,address,point,grade_name , (SELECT COUNT(PCODE) FROM MEMBER JOIN WISH_LIST  USING(USER_NO)WHERE USER_ID = ? ) AS WISHCOUNT ,(SELECT COUNT(*)FROM MEMBER  JOIN MEM_COUPON C  USING (USER_NO) WHERE USER_ID = ? ) AS COUPONCOUNT FROM MEMBER M join mem_grade using (grade_code)  WHERE USER_ID = ? AND USER_PWD= ? AND STATUS='Y'
+loginMember=SELECT user_no,grade_code,user_id,user_pwd,user_name,gender,birthday,phone,email,enroll_date,modify_date,buy_point,ADMIN,status,point,grade_name , (SELECT COUNT(PCODE) FROM MEMBER JOIN WISH_LIST  USING(USER_NO)WHERE USER_ID = ? ) AS WISHCOUNT ,(SELECT COUNT(*)FROM MEMBER  JOIN MEM_COUPON C  USING (USER_NO) WHERE USER_ID = ? ) AS COUPONCOUNT FROM MEMBER M join mem_grade using (grade_code)  WHERE USER_ID = ? AND USER_PWD= ? AND STATUS='Y'
 
 getListCount=SELECT COUNT(*) FROM MEMBER
 selectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
@@ -87,3 +87,7 @@ deleteReservPoint=INSERT INTO POINT VALUES(?, SYSDATE, 2, 'reservation', ?)
 orderHistoryListCount=SELECT * FROM ORDERS WHERE USER_NO=?
 orderHistoryList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,ORDER_NO,ORDERER,ORDERER_PHONE,RECIPIENT,RECIPIENT_PHONE,RECIPIENT_ADDRESS,shipping_fee,PAYMENT,ORDER_DATE,PROGRESS,CART,ORDER_MAESSAGE,PRODUCT_INFO FROM ORDERS JOIN MEMBER USING (USER_NO) WHERE USER_NO=? ORDER BY ORDER_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
+
+#EVENT
+insertEventPoint=INSERT INTO POINT VALUES(?, SYSDATE, 1, 'event', ?)
+eventUpdatePoint=UPDATE MEMBER SET POINT=POINT+? WHERE user_no=?
