--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -92,3 +92,8 @@ MyPageOrderConfirm=UPDATE ORDERS SET PROGRESS='40' WHERE ORDER_NO=?
 #EVENT
 eventUpdatePoint=UPDATE MEMBER SET POINT=POINT+? WHERE user_no=?
 insertEventPoint=INSERT INTO POINT VALUES(?, SYSDATE, 1, 'event', ?)
+
+
+#reservCafe
+reservListCount= SELECT COUNT(*) FROM RESERVATION WHERE USER_NO=?
+SelectReservCafe= SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT RESERV_NO,APP_date,reserv_date,reserv_time,visit_num,accept,total FROM RESERVATION JOIN RESERV_PAYMENT USING (RESERV_NO) WHERE USER_NO=? ORDER BY RESERV_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
