mypage main 현철 수정

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -86,7 +86,7 @@ deleteReservPoint=INSERT INTO POINT VALUES(?, SYSDATE, 2, 'reservation', ?)
 #ORDER HISTORY
 orderHistoryListCount=SELECT * FROM ORDERS WHERE USER_NO=?
 orderHistoryList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,ORDER_NO,ORDERER,ORDERER_PHONE,RECIPIENT,RECIPIENT_PHONE,RECIPIENT_ADDRESS,shipping_fee,PAYMENT,ORDER_DATE,PROGRESS,CART,ORDER_MAESSAGE,PRODUCT_INFO FROM ORDERS JOIN MEMBER USING (USER_NO) WHERE USER_NO=? ORDER BY ORDER_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
-
+MyOrderHistoryList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,ORDER_NO,ORDERER,ORDERER_PHONE,RECIPIENT,RECIPIENT_PHONE,RECIPIENT_ADDRESS,shipping_fee,PAYMENT,ORDER_DATE,PROGRESS,CART,ORDER_MAESSAGE,PRODUCT_INFO FROM ORDERS JOIN MEMBER USING (USER_NO) WHERE USER_NO=? ORDER BY ORDER_DATE DESC) A) WHERE RNUM BETWEEN 1 AND 1
 MyPageOrderConfirm=UPDATE ORDERS SET PROGRESS='40' WHERE ORDER_NO=?
 
 #EVENT
